--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,11 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "index.js",
+    "version": 2,
+    "builds": [{
+      "src": "src/index.js",
       "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
+    }],
+    "routes": [{
       "src": "/(.*)",
-      "dest": "index.js"
-    }
-  ]
-}
+      "dest": "src/index.js"
+    }]
+  }
